# Guanwu-master

./: .gitignore  pyproject.toml  run_edge_temporal_full_frame3.ps1  run_video_pipeline.py  test_grounded_sam2_road.py  visualize_scene_usdc_tmp.py
configs/: workspace.example.yaml
process/: __init__.py
process/pose_optimizer/: README.md  __init__.py  cli.py  config.py  variants.py
process/pose_optimizer/configs/: baseline.yaml  edge_contour_fast_quick.yaml  fast.yaml  fast_quick.yaml  generic_appearance_temporal.yaml  temporal_fast_quick.yaml
process/pose_optimizer/priors/: __init__.py  depth_consistency_prior.py  image_appearance_prior.py  support_plane_prior.py
process/pose_optimizer/renderers/: README.md
specs/: algo.md  overall.md
src/guanwu/: __init__.py  cli.py
src/guanwu/adapters/: __init__.py  (+9 more)
tests/: conftest.py  test_cli.py  test_projects.py  test_validation.py
tests/adapters/: test_adapter_contract.py  test_robotwin2.py
tests/unit/: test_config.py  test_generic_pose_priors.py  test_grounded_sam2_road_script.py  test_ids.py  test_instance_matching.py  test_remote_tasks.py  test_road_geometry.py  test_robotwin2_replay.py  test_scene_background_assets.py  test_scene_background_depth_service.py  test_schemas.py  test_state_estimator.py  test_taxonomy.py  test_transforms.py  test_video_mesh_reconstruct.py  test_video_object_detect.py  test_video_pose_temporal.py  test_video_project_config.py  test_video_project_viewer.py  test_video_scene_compose_viewer_glb.py  test_video_settings.py  test_video_trajectory_smoothing.py  test_zaiwu_gateway.py
(+112 files in other folders)
