[project]
name = "guanwu"
version = "0.1.0"
description = "Mesh-first unified data factory for 3D/4D dataset collection and normalization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fsspec>=2023.1",
    "pyarrow>=14.0",
    "duckdb>=0.9",
    "orjson>=3.9",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "tqdm>=4.65",
    "tenacity>=8.2",
    "rich>=13.0",
    "networkx>=3.0",
    "huggingface-hub>=1.10.1",
    "h5py>=3.16.0",
]

[project.optional-dependencies]
geometry = [
    "trimesh>=4.0",
    "pycollada>=0.8",
    "opencv-python>=4.8",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4",
    "Pillow>=10.0",
    "h5py>=3.9",
    "zstandard>=0.21",
    "usd-core>=24.0",
]
video = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp>=1.0",
    "openai>=1.40",
    "pycocotools>=2.0.8",
    "plyfile>=1.1",
    "rerun-sdk>=0.20",
    "open3d>=0.19",
]
pose-optimize = [
    "opencv-python>=4.8",
    "trimesh>=4.0",
    "pycocotools>=2.0.8",
    "torch>=2.0",
    "pyrender>=0.1.45",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
guanwu = "guanwu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guanwu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
